--- a/app/game-password.html
+++ b/app/game-password.html
@@ -58,7 +58,7 @@
                     <label class="checkbox">
                         <input class="checkbox-inp" type="checkbox" name="checkbox" checked>
                         <span class="checkbox-custom"></span>
-                        <span class="label">Запрашивать пароль при  входе в родительский режим</span>
+                        <span class="label">Запрашивать пароль при <br>входе в родительский режим</span>
                     </label>
                    <button type="submit" class="btn btn-accent"><span>задать</span></button>
                 </div>
