--- a/app/list.html
+++ b/app/list.html
@@ -63,6 +63,12 @@
                 <li><a href="game-photos.html">Game photos</a></li>
                 <li><a href="game-card-line.html">Game card line</a></li>
                 <li><a href="game-card-line2.html">Game card line2</a></li>
+                <li><a href="animation1.html">animation1</a></li>
+                <li><a href="animation2.html">animation2</a></li>
+                <li><a href="animation3.html">animation3</a></li>
+                <li><a href="animation4.html">animation4</a></li>
+                <li><a href="animation5.html">animation5</a></li>
+                <li><a href="animation6.html">animation6</a></li>
             </ul>
         </div>
     </div>
