--- a/app/list.html
+++ b/app/list.html
@@ -69,6 +69,13 @@
                 <li><a href="animation4.html">animation4</a></li>
                 <li><a href="animation5.html">animation5</a></li>
                 <li><a href="animation6.html">animation6</a></li>
+                <li><a href="game-settings-card1-new.html">game-settings-card1-new</a></li>
+                <li><a href="game-settings-card1-new1.html">game-settings-card1-new1</a></li>
+                <li><a href="game-settings-card1-new2.html">game-settings-card1-new2</a></li>
+                <li><a href="game-settings-card1-new3.html">game-settings-card1-new3</a></li>
+                <li><a href="game-card-line-new1.html">game-card-line-new1</a></li>
+                <li><a href="game-card-line-new2.html">game-card-line-new2</a></li>
+                <li><a href="game-card-line-new3.html">game-card-line-new3</a></li>
             </ul>
         </div>
     </div>
